[project]
name = "picsure"
version = "0.1.0"
description = "Python client for the PIC-SURE API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.optional-dependencies]
pfb = ["pypfb>=0.5"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5",
    "pandas-stubs>=2.0",
    "picsure",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picsure"]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["picsure"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
picsure = { workspace = true }
